Auth commit